--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-username: minixalpha
+username: ZhangNian1995
 baseurl: /StrayBirds
 markdown: redcarpet
 safe: false
 pygments: true
-title: 飞鸟集
+title: Vitamin°
